--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt,a4paper,twoside]{article}
-\usepackage[noeledsec,noend,noledgroup,series={A,C}]{reledmac}
+\usepackage[noeledsec,noend,noledgroup,series={A,C},parapparatus]{reledmac}
 \usepackage{reledpar}
 \usepackage{fontspec}
 \usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.95cm,outer=1.65cm,bottom=2.54cm]{geometry}
@@ -10,12 +10,13 @@
 \setlength{\bibhang}{0.5cm}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
-\title{CARMINA OB MORTEM PATRIS}
-\author{\fontsize{14}{11.96}\selectfont GIORGII MANRICI}
-\date{\vspace{60pt}\fontsize{9}{11}\selectfont{EDITIO CRITICA INSTRVXIT}\\\vspace{15pt}\fontsize{12}{9}\selectfont I. BERACHAMONS LETESMVS\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\title{COPLAS POR LA MVERTE DE SV PADRE}
+\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
+\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnumberonlyfirstinline
+\Xnumberonlyfirstintwolines
 \Xsymlinenum{||}
 \Xbeforesymlinenum{-0.5em}
 \newcommand{\comillas}[1]{«#1»}
@@ -34,8 +35,8 @@
 %Tamaño vertical del aparato crítico.
 \Xprenotes{11pt}
 \prenotesX{11pt}
-\Xafterrule{1pt plus 2pt minus 0.5pt}
-\afterruleX{1pt plus 2pt minus 0.5pt}
+\Xafterrule{2pt}
+\afterruleX{2pt}
 %
 \usepackage{tocloft}
 \renewcommand{\cftsecleader}{\cftdotfill{\cftdotsep}}
@@ -193,8 +194,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
-\addcontentsline{toc}{section}{Texto y aparato críticos}
+\section*{\raggedleft \fontsize{13}{14.35}\selectfont OBRA Y APARATO CRÍTICO}
+\addcontentsline{toc}{section}{Obra y aparato crítico}
 \newpage
 
 \section*{{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}}
@@ -248,7 +249,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \newpage
 %Aquí inician las COPLAS POR LA MVERTE DE SV PADRE.
 {\begin{center}
-		[I]\footnoteA{[I] \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
+		[I]\footnoteA{[I] {\fontsize{7.5}{9}\selectfont INCIPIT} = \comillas{Coplas que fiço don jorge ma\textit{n}rriq\textit{ue} por la muerte de su padre} \textit{LB3}; \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre} \textit{82*JM}; \comillas{De don jorge manrique por la muerte de su padre} \textit{86*RL}; \comillas{Coplas de do\textit{n} jorge ma\textit{n}riq\textit{ue} a la muerte del maestre don rrod\textit{rig}o ma\textit{n}riq\textit{ue} su padre} \textit{HH1}; \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre} \textit{83*IM}.}
 \end{center}
 %Espacio para que el comando que ejecuta el sistema no se quiebre.
 \beginnumbering
@@ -588,14 +589,14 @@ Los infantes de Aragó\textit{n},
 ¿Qué fue de tanta inve\textit{n}çión
 
 como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\\
-Las justas y los torneos,\\
+Las justas y los torneos,\edtext{}{\linenum{|||||189}\linenum{||190|||192}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras
 
 y çimeras\\
 ¿fuero\textit{n} sino devaneos?\\
 ¿Qué fuero\textit{n} sino verduras
 
-de las eras? \footnoteC{187-189/190-192 \textit{transp. 86*RL}.}
+de las eras?
 \pend
 
 \begin{center}
@@ -867,7 +868,7 @@ No dexó grandes thesoros\\
 ni \edtext{alcançó}{\lemma{alcanço}\Afootnote{llego \textit{HH1}}} \edtext{gra\textit{n}des}{\Afootnote{muchas \textit{86*RL}}} riq\textit{ue}zas 
 
 ni baxillas,\\
-mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{«guerras a moros» en \textit{LB3}. Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» —que ya citó \textcite[cap. IX]{MenendezYPelayo1944}—, los recoge con gran detalle. A continuación, el texto según la edición crítica de Tate:\\
+mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» —que ya citó \textcite[cap. IX]{MenendezYPelayo1944}—, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
 	\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
 	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida [...] subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\textit{n}do sus fortalezas \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}
@@ -899,7 +900,7 @@ fizo \edtext{en estas dichas guerras}{\Afootnote{en la dicha guerra \textit{82*J
 
 que fazía,\\
 fizo tratos ta\textit{n} ho\textit{n}rrosos\\
-que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} más \edtext{t\textit{ie}rras}{\Afootnote{tierra \textit{δ}, \textit{ε}, \textit{83*IM}}}\footnoteC{Lecciones plurales de \textit{LB3}. \textit{cfr. pr. c.}}  
+que le diero\textit{n} \edtext{aún}{\lemma{avn}\Afootnote{muy \textit{83*IM}}} más \edtext{t\textit{ie}rras}{\Afootnote{tierra \textit{δ}, \textit{ε}, \textit{83*IM}}} 
 
 \edtext{que}{\Afootnote{quel \textit{82*JM}}} tenía.
 \pend
@@ -937,12 +938,12 @@ mas por çercos y por guerras\\
 y por fuerça de sus manos 
 
 las \edtext{cobró}{\lemma{cobro}\Afootnote{gano \textit{HH1}}}.\\
-Pues nuestro rey natural,\\
-si de las obras que obró\footnoteC{379-380 \textit{transp. LB3} = \comillas{si de las obras que obro / el nuestro rey natural}.}
+Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{transp. LB3} = \comillas{si de las obras que obro} / \comillas{el nuestro rey natural}}}\\
+si de las obras que obró
 
 fue servido,\\
 dígalo el de Portugal,\\
-\edtext{y en}{\Afootnote{a \textit{om. LB3}; si en \textit{86*RL}; quien en \textit{HH1}}} Castilla, quien siguió  
+\edtext{y en}{\Afootnote{en \textit{LB3}; si en \textit{86*RL}; quien en \textit{HH1}}} Castilla, quien siguió  
 
 su partido.                                                                                          
 \pend
@@ -964,7 +965,7 @@ a que no puede bastar
 
 cuenta çierta,\\
 en la su villa de Ocaña,\\
-vino la Muerte a llamar\edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{lamar \textit{err. 83*IM}}}
+vino la Muerte \edtext{a}{\Afootnote{\textit{om. 83*IM}}} llamar\edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{lamar \textit{err. 83*IM}}}
 
 a su puerta, 
 \pend
@@ -976,7 +977,7 @@ a su puerta,
 diziendo: «bue\textit{n} cavallero,\\
 dexad el mu\textit{n}do engañoso                                                               
 
-\edtext{sin falago}{\Afootnote{y su [\textit{f}|\textit{h}]alago \textit{δ}, \textit{ε}; con halago \textit{83*IM}}}\footnoteC{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada, muda o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], y alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría —probablemente— a que don Rodrigo Manrique debería dejar «el mundo engañoso / sin [\textit{atender al} / \textit{seguir su}] falago», un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
+\edtext{sin falago}{\Afootnote{y su [\textit{f}-\textit{h}]alago \textit{δ}, \textit{ε}; con halago \textit{83*IM}}}\footnoteC{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], aunque alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría —probablemente— a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \textit{falago}, un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
 v\textit{uest}ro coraçó\textit{n} de azero\\
 muestre su esfuerço famoso 
 
@@ -1051,7 +1052,7 @@ y co\textit{n} esta confiança\\
 y co\textit{n} la fe ta\textit{n} entera 
 
 que tenéis,\\
-partid con buena \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» —el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito—, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}, que continúa sosteniendo en su edición de 2013.} espera\textit{n}ça,\\
+partid con buena \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» —el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito—, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
 \edtext{que la vida verdadera}{\Afootnote{estotra vida tercera \textit{δ}, \textit{MN19}, \textit{83*IM}}}                                                                           
 
 \edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \textit{δ}, \textit{MN19}, \textit{83*IM}}}.» 
@@ -1084,7 +1085,7 @@ q\textit{ua}ndo Dios q\textit{ui}ere q\textit{ue} muera,
 \end{center}
 \pstart
 »Tú, q\textit{ue} por n\textit{uest}ra maldat\\
-tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil \textit{86*RL}, \textit{MN19}}}\footnoteC{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \textit{Triunfos} de Juan de Padilla, el Cartujano, y \textit{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \textit{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \textit{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la 3ª acepción del \textit{Diccionario de Autoridades} para \textit{civil}, que es «desestimable, mezquino, ruin, y de baxa condicion y procedéres», que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «[...] actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \textit{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene —siguiendo el texto crítico de \textcite{Foulché-Delbosc1912}— con la lección \textit{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por considerarla una \textit{lectio facilior}.}
+tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil \textit{86*RL}, \textit{MN19}}}\footnoteC{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \textit{Triunfos} de Juan de Padilla, el Cartujano, y \textit{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \textit{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \textit{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la 3ª acepción del \textit{Diccionario de Autoridades} para \textit{civil}, que es «desestimable, mezquino, ruin, y de baxa condicion y procedéres», que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «[...] actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \textit{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene —siguiendo a \textcite{Foulché-Delbosc1912}— con la lección \textit{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por \textit{lectio facilior}.}
 
 y \edtext{baxo}{\Afootnote{\textit{om. 82*JM}}} no\textit{n}bre;\\
 \edtext{Tú, que a tu divinidat}{\lemma{tu que a tu}\Afootnote{juntaste \textit{82*JM}}}\\
@@ -1110,7 +1111,7 @@ todos sentidos humanos
 
 \edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su \textit{De anima}—, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en crítica textual, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
-\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\footnoteC{473-480 \textit{sec. m. LB3}.}                                                                        
+\edtext{}{\linenum{|||||480}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}                                                                 
 
 y criados,\\
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio \textit{LB3}}},\\
