--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -72,15 +72,15 @@
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
 
-\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnote{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r.; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.} \vspace{5pt}
+\comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteC{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r.; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.} \vspace{5pt}
 
 Las \textit{Coplas por la muerte de su padre} son una «colección» de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} —tres octosílabos y un tetrasílabo—, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
 
-El título de la obra, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitraria si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título de la obra no es estrictamente reconstruible, aunque, por mayoría, se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal, o al menos no como se transmitió.
+El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitraria si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es estrictamente reconstruible aunque, por mayoría, se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal, o al menos no como se transmitió.
 
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que no existió un \comillas{obras de don Jorge Manrique} o una edición de sus textos, sino que solo se conservaron dispersos en cancioneros.
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron dispersos en cancioneros.
 
-\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnote{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.].}}
+\section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnoteC{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{section}{Testimonios}
 
 \textit{LB3} = \textit{Cancionero de Egerton}; British Library, Eg. 939.
@@ -110,7 +110,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \section*{{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}}
 \addcontentsline{toc}{section}{Criterios de edición}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnote{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza como texto de base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnote{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteC{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnoteC{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
 	\begin{center}
 		\begin{tikzpicture}[every node/.style={font=\normalsize}, sibling distance=10mm]
 		
@@ -155,9 +155,9 @@ Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcit
 	\end{tikzpicture}
 	\end{center}
 
-Se utilizó como texto de base el testimonio de \textit{LB3} por portar este lecciones no contaminadas, conservar el español de la época y por ser cercano a la redacción del texto manriqueño.
+Se utilizó como texto base el testimonio \textit{LB3} por portar este lecciones no contaminadas, conservar el castellano de la época, y por ser cercano a la redacción de la obra manriqueña.
 
-Criterios de presentación gráfica\footnote{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn}=\textit{ñ} y las grafías dobles.}:
+Criterios de presentación gráfica\footnoteC{Las modificaciones no aplican al aparato de variantes, a excepción de \textit{nn} y las grafías dobles.}:
 
 ~\textit{b}-\textit{v} = se conserva la alternancia.
 
@@ -185,9 +185,9 @@ Criterios de presentación gráfica\footnote{Las modificaciones no aplican al ap
 
 Las contracciones se separan sin indicación alguna. Las grafías en cursiva corresponden, casi sin excepción, a siglas en \textit{LB3}, que se desarrollaron según usos del copista; también cuando se adopten lecciones de \textit{HH1} o de algún testimonio impreso.
 
-El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica del texto \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
+El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes textuales y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnote{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones al texto.
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones.
 
 \section*{{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}}
 \addcontentsline{toc}{section}{Bibliografía}
@@ -195,8 +195,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft \fontsize{13}{14.35}\selectfont OBRA Y APARATO CRÍTICO}
-\addcontentsline{toc}{section}{Obra y aparato crítico}
+\section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICO}
+\addcontentsline{toc}{section}{Texto y aparato crítico}
 \newpage
 
 \section*{{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}}
